--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ hr {
 
 /*** HERO ***/
 .Hero {
+    height: 650px;
     background-color: #E4F9F5;
     position: relative;
     padding-top: 100px;
@@ -70,6 +71,12 @@ hr {
     position: absolute;
     left: 250px;
     bottom: 300px;
+}
+
+.mountain {
+    position: absolute;
+    left: 700px;
+    bottom: 0;
 }
 
 
@@ -89,21 +96,9 @@ hr {
 }
 
 .skill1 {
-    width: 50%;
-    margin: 100px auto 100px auto;
+    width: 30%;
+    margin: 100px auto 50px auto;
     text-align: left;
-}
-
-.skill2 {
-    width: 50%;
-    margin: 100px auto 100px auto;
-    text-align: right;
-}
-
-.skill2 p td {
-    width: 50%;
-    margin: 100px auto 100px auto;
-    text-align: right;
 }
 
 .skill p {
@@ -114,15 +109,8 @@ hr {
     border-radius: 100%;
     width: 25%;
     margin-right: 30px;
-    float: left;
-    padding-bottom: 15px;
-}
-
-.s2-img {
-    width: 25%;
-    margin-left: 30px;
-    float: right;
-    padding-bottom: 15px;
+    margin-top: 25px;
+    float: left;  
 }
 
 .checked {
